deploy/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
  - name: web
    protocol: HTTP
    port: 8000
    allowedRoutes:
      namespaces:
        from: All
      # kinds:
      # - kind: HTTPRoute
  - name: websecure
    protocol: HTTPS
    port: 8443
    allowedRoutes:
      namespaces:
        from: All
