deploy/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
spec:
  parentRefs:
    - name: my-gateway
      namespace: traefik
  hostnames:
  - demo.example.com
  - localhost

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /app

      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /

      backendRefs:
        - name: demo-app
          port: 80
